[package]
name = "bellini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde_json = "1.0.95"
humansize = "2.1.3"
hashbrown = "0.13.2"
indexmap = "1.9.3"
tantivy = "0.19.2"

bytecheck = "0.6.10"
smallvec = "1.10.0"

mimalloc = { version = "0.1.36", default-features = false }
zstd = { version = "0.12.3+zstd.1.5.2", features = ["no_asm"] }
lz4_flex = "0.10.0"
serde = { version = "1"}
rkyv = { version = "0.7.41", features = ["validation", "smallvec"] }

