[package]
name = "bellini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = "0.7.41"
crc32fast = "1.3.2"

serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
rkyv = { version = "0.7.41", features = ["validation"] }

[features]
validation = ["rkyv/validation"]
